[package]
name = "polkadot-collator"
version = "5.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "polkadot-collator"
path = "src/main.rs"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"
async-trait = "0.1.42"

# Parachain runtimes
rococo-parachain-runtime = { package = "rococo-runtime", path = "rococo" }
shell-runtime = { path = "shell" }
statemint-runtime = { path = "statemint" }
statemine-runtime = { path = "statemine" }
westmint-runtime = { path = "westmint" }
parachains-common = { path = "parachains-common" }

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/zzm-Zhong/substrate', branch = "polkadot-v0.9.15-fix" }
frame-benchmarking-cli = { git = 'https://github.com/zzm-Zhong/substrate', branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-inherents = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-session = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-cli = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-client-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-executor = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-service = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-telemetry = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-transaction-pool = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-transaction-pool = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-network = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-basic-authorship = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-timestamp = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-blockchain = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-block-builder = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-keystore = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-chain-spec = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-rpc = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-tracing = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-offchain = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-consensus-aura = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
substrate-prometheus-endpoint = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
pallet-transaction-payment-rpc = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# Cumulus dependencies
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-aura = { path = "../client/consensus/aura" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-consensus-common = { path = "../client/consensus/common" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../primitives/parachain-inherent" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-service = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-cli = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-parachain = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
tempfile = "3.2.0"

[features]
default = []
runtime-benchmarks = [
	'polkadot-service/runtime-benchmarks',
	'statemint-runtime/runtime-benchmarks',
	'statemine-runtime/runtime-benchmarks',
	'westmint-runtime/runtime-benchmarks',
]
