[package]
name = "cumulus-client-pov-recovery"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
# Substrate deps
sp-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-maybe-compressed-blob = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-client-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-node-primitives = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-overseer = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }
polkadot-node-subsystem = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.15-fix" }

# Cumulus deps
cumulus-primitives-core = { path = "../../primitives/core" }

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
rand = "0.8.3"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }

# substrate deps
sc-client-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-cli = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
substrate-test-utils = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-service = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
