[package]
name = "pallet-asset-tx-payment"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
description = "pallet to manage transaction payments in assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate dependencies
frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-system = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-transaction-payment = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-std = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

[dev-dependencies]
smallvec = "1.4.1"
serde_json = "1.0.41"

pallet-assets = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
pallet-balances = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-storage = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-transaction-payment/std",
]
try-runtime = ["frame-support/try-runtime"]
