[package]
name = "parachain-template-runtime"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

[dependencies]
hex-literal = { version = '0.3.1', optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Local Dependencies
pallet-template = { path = "../pallets/template", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-block-builder = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-consensus-aura = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-inherents = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-offchain = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-session = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-std = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-transaction-pool = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-version = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.15-fix" }
frame-executive = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
frame-system = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-system-benchmarking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.15-fix" }
frame-system-rpc-runtime-api = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-balances = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-session = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-sudo = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-timestamp = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-transaction-payment = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../pallets/aura-ext", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../pallets/xcmp-queue", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
pallet-collator-selection = { path = "../../pallets/collator-selection", default-features = false }
parachain-info = { path = "../../polkadot-parachains/pallets/parachain-info", default-features = false }
cumulus-pallet-session-benchmarking = {path = "../../pallets/session-benchmarking", default-features = false, version = "3.0.0"}

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/kami1983/ares-polkadot", default-features = false , branch = "release-v0.9.15-fix" }
polkadot-parachain = { git = "https://github.com/kami1983/ares-polkadot", default-features = false , branch = "release-v0.9.15-fix" }
polkadot-runtime-common = { git = "https://github.com/kami1983/ares-polkadot", default-features = false, branch = "release-v0.9.15-fix" }
xcm = { git = "https://github.com/kami1983/ares-polkadot", default-features = false , branch = "release-v0.9.15-fix" }
xcm-builder = { git = "https://github.com/kami1983/ares-polkadot", default-features = false , branch = "release-v0.9.15-fix" }
xcm-executor = { git = "https://github.com/kami1983/ares-polkadot", default-features = false , branch = "release-v0.9.15-fix" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	'hex-literal',
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	'cumulus-pallet-session-benchmarking/runtime-benchmarks',
]
