[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External dependencies
codec = { package = 'parity-scale-codec', version = '2.3.0', features = ['derive'], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-consensus-aura = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-std = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-io = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-executive = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-support = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-system = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-assets = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-balances = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-core = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }

# Polkadot dependencies
polkadot-runtime-common = { git = 'https://github.com/kami1983/ares-polkadot', default-features = false , branch = "release-v0.9.15-fix" }
polkadot-primitives = { git = 'https://github.com/kami1983/ares-polkadot', default-features = false , branch = "release-v0.9.15-fix" }
xcm = { git = 'https://github.com/kami1983/ares-polkadot', default-features = false , branch = "release-v0.9.15-fix" }
xcm-executor = { git = 'https://github.com/kami1983/ares-polkadot', default-features = false , branch = "release-v0.9.15-fix" }

# Local dependencies
pallet-asset-tx-payment = { path = '../../pallets/asset-tx-payment', default-features = false }
pallet-collator-selection = { path = '../../pallets/collator-selection', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = 'https://github.com/zzm-Zhong/substrate', default-features = false , branch = "polkadot-v0.9.15-fix" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/zzm-Zhong/substrate', branch = "polkadot-v0.9.15-fix" }

[features]
default = ["std"]
std = [
	'codec/std',
	'scale-info/std',
	'sp-consensus-aura/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-asset-tx-payment/std',
	'pallet-collator-selection/std',
	'pallet-assets/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'polkadot-runtime-common/std',
	'polkadot-primitives/std',
]
